# weather-poc-disintegrate

./: .gitignore  Cargo.toml  Database.Dockerfile  Dockerfile  README.md  justfile  rustfmt.toml
migrations/: 20230801230301_create_event_sourced_tables.sql  20230801230503_create_projection_offset_table.sql  20230801230751_create_weather_query_table.sql  20230801230815_create_monitored_zones_query_table.sql  20230801230858_create_update_locations_query_table.sql  20240223234000_table_event_sequence.sql  20240223234027_idx_event_sequence_committed.sql  20240223234958_table_zone_weather.sql  20240223235229_table_update_weather_history.sql
resources/: application.yaml  local.yaml  production.yaml  secrets.yaml
scripts/: create_db.sh  init_db.sh
src/: lib.rs  main.rs  postgres.rs  server.rs  setup_tracing.rs  testing.rs
src/model/: command_result.rs  frame.rs  mod.rs  tracing_processor.rs  weather.rs
src/model/registrar/: mod.rs  processor.rs  protocol.rs  read_model.rs  services.rs  state.rs
src/model/weather/update/: location_status.rs  mod.rs  protocol.rs  read_model.rs  services.rs  state.rs  status.rs
src/model/weather/zone/: mod.rs  protocol.rs  read_model.rs  services.rs  state.rs
src/server/: api_errors.rs  api_result.rs  health_routes.rs  state.rs  weather_routes.rs
src/services/: mod.rs  noaa.rs
src/settings/: cli_options.rs  http_api_settings.rs  mod.rs  tests.rs
tests/data/: application.yaml  geojson-active_alerts-1.json  geojson-waz558-zone-forecast-1.json  geojson-waz558-zone-observation-1.json  local.yaml
tests/noaa/: main.rs
tests/zone/: main.rs
